# EasyBot

./: .gitignore  CMakeLists.txt  CNAME  EasyBotLoader.cpp  EasyBot_dlmain.cpp  README.md  mkdocs.yml  safe_queue.h
BridgeAPI/: EasyApi.cpp  EasyApi.h  ScriptRuntime.cpp  ScriptRuntime.h
Functions/: Game.cpp  Game.h  memory_functions.cpp  memory_functions.h
General/: main_window_tab.cpp  main_window_tab.h  select_client_tab.cpp  select_client_tab.h
Heal/: heal_tab.cpp  heal_tab.h  heal_thread.cpp  heal_thread.h
Injector/: EasyBotLoader.cpp  injector.h
Loot/: loot_tab.cpp  loot_tab.h  loot_thread.cpp  loot_thread.h
PatternScans/: pattern_scan.cpp  pattern_scan.h
Scripts/: script_tab.cpp  script_tab.h  script_thread.cpp  script_thread.h
Spell/: spell_tab.cpp  spell_tab.h  spell_thread.cpp  spell_thread.h
Status/: status_tab.cpp  status_tab.h
Structs/: medivia_struct.h
Walker/: walker_tab.cpp  walker_tab.h  walker_thread.cpp  walker_thread.h
